@@ -7,8 +7,8 @@ AUX poppler-0.12.3-gdk.patch 633 RMD160 85f009940f64f1e4d8d3b1dff2a8ec1e09b95420
 AUX poppler-0.12.4-config.patch 3028 RMD160 5e0d0e51621eeb272d019990c526cbcef21cec1f SHA1 1279f1c31356ccf80857999f1c3574b28a9fae7c SHA256 7c1b7765ad6a55397d16822bf89e9dcee075181bf589bbbad100854274bbe69b
 DIST poppler-0.12.3.tar.gz 1616883 RMD160 a8fd07ec4dc918cc17390a5236aff9a43e1f7253 SHA1 bce8b675fb7c22d507b1965efa7bd71d9ce09460 SHA256 7a4ffe6d2950c446c285700d3b2dc399540a27ce635dd712aff646f02f8dfbcc
 DIST poppler-0.12.4.tar.gz 1674400 RMD160 9c212ebb8fc3d4cbc532f1c826428cc4d195cb5b SHA1 306507e0fbf47736b456218618f043a216c263ef SHA256 2afa2a54bd4ccb09e92f82b64bcafa95d39a404a3b3db9d6a5fcad0e0229857a
-EBUILD poppler-0.12.3-r3.ebuild 2767 RMD160 4c74e1d4b163ffbd6fdb6e4b2fba13c727729264 SHA1 7dfc15fed7dd085aca0dc2586bceba8ffdcff1b2 SHA256 f73550a3deddbcf8a8ebb9ed0abb1f24f7c130c20fda435767c40fa8a7e5bed6
-EBUILD poppler-0.12.3-r5.ebuild 2835 RMD160 0d4c32e4367da8f7d312456d24f16478f71cb104 SHA1 fb8052a1d0810fa3882ce2f8831358f0c22b57a4 SHA256 feda9a2e09716936d9f4f455db479ccadd5d64a3a0f38d03b43b5786c1a0bedb
-EBUILD poppler-0.12.4.ebuild 2872 RMD160 3585e8e89ce2ee3612336369bd8ea510d057df43 SHA1 a261447ab750f12b1da163eaba72645a5bdb3a46 SHA256 fe764bccd8eb97e0c816c7b00ef17673d299daee24227bccaaecd190f6d45784
-MISC ChangeLog 31726 RMD160 1bbb42542f0bf84ba7de4b825ae66fdee9993935 SHA1 bad983500b63c38aa3f2355d5abbab8af6ee71ba SHA256 e8e1dd847abd82445995621d7342a10e8ef999ba0be6b339ef8e41cad76c5848
+EBUILD poppler-0.12.3-r3.ebuild 2771 RMD160 b7b0f1b15a143c07cfe5e5e77907c0acb7bac62f SHA1 46b23904f3bce70be8c2f7cac24552ac1484c7e8 SHA256 6d4393e0f400acf3ec8d28cf8ffbdab6f12110f7aac449eb5feb71a91d734ab4
+EBUILD poppler-0.12.3-r5.ebuild 2839 RMD160 a3bb825214cc5e6dd510c086b36545874d97ec17 SHA1 80a1f78f8ef4c6093f95856fca38233253f7fe7c SHA256 f93c12566f743bc056e3f551ff46f25d3dff7fdc980ef2e86fb5d50cb91bd503
+EBUILD poppler-0.12.4.ebuild 3013 RMD160 9c25ecb9540398b3ebc51ef535422832ce276827 SHA1 ed7d0052a8859cc6660910b2cd03ae048613bcd9 SHA256 3294138b2ab19a71e8c49f6e3620b90539626304119678d380c7806cf9023701
+MISC ChangeLog 31870 RMD160 16b7e117406e6c4616749b7f91f438b583950589 SHA1 f0add82b5545f4b88dd90c4e404a98f97e0902b9 SHA256 e6dba576d68f9de5d0d0b633498ff21723b6cdaaa99a170a535e7e2b61025f5f
 MISC metadata.xml 565 RMD160 6a9e714721911707b23fb27535d64ab92c90a5f8 SHA1 ca7711ec7b7d2953310ae3b00ff2f447371c103f SHA256 ec946c05ddfa21325d7cb705cee3342f4a95a1d08b02f324e4bac36bfc479e0b
