@@ -1,6 +1,9 @@
 # ChangeLog for app-text/poppler
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.223 2010/02/18 01:41:25 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.224 2010/02/19 18:01:06 grobian Exp $
+
+  19 Feb 2010; Fabian Groffen <grobian@gentoo.org> poppler-0.12.4.ebuild:
+  make sure we link with -lrt on Solaris, problem reported upstream
 
 *poppler-0.12.4 (18 Feb 2010)
 
